Fix inserter scrollbar and list items width (#27490)

--- a/client/gutenberg/editor/style.scss
+++ b/client/gutenberg/editor/style.scss
@@ -40,6 +40,15 @@
 			top: 57px;
 		}
 	}
+
+	.editor-inserter__menu {
+		.editor-inserter__search {
+			width: auto;
+		}
+		.editor-block-types-list__list-item {
+			box-sizing: border-box;
+		}
+	}
 }
 
 //needed for oembed iframes to appear
